Fix social media link spacing

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -621,7 +621,7 @@ Context/Local Nav
 
 .footer-links li {
   display: inline-block;
-  margin: 0 0.8em;
+  margin: 0 1.8em;
 }
 
 .footer-links-contribute li {
